--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "datatables.net": "^1.10.25",
+    "datatables.net-dt": "^1.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
