--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "datatables.net": "^1.10.25",
     "datatables.net-bs4": "^3.2.2",
     "datatables.net-dt": "^1.1.0",
+    "jquery-sortable-lists": "^2.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
